--- a/app/src/main/res/xml/preferences_site_bol.xml
+++ b/app/src/main/res/xml/preferences_site_bol.xml
@@ -35,6 +35,14 @@
             />
 
         <SwitchPreference
+            android:defaultValue="true"
+            android:icon="@drawable/ic_baseline_shop_24"
+            android:key="bol.search.shopping.menu"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/pt_search_show_shopping_options" />
+
+        <SwitchPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_barcode"
             android:key="bol.search.byIsbn.prefer.10"
