--- a/app/src/main/res/xml/preferences_site_amazon.xml
+++ b/app/src/main/res/xml/preferences_site_amazon.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -30,6 +30,14 @@
             android:key="amazon.host.url"
             android:summary="@string/preference_not_set"
             android:title="@string/lbl_website_address" />
+
+        <SwitchPreference
+            android:defaultValue="true"
+            android:icon="@drawable/ic_baseline_shop_24"
+            android:key="amazon.search.shopping.menu"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/pt_search_show_shopping_options" />
 
         <SwitchPreference
             android:defaultValue="false"
