restored but NOT enabled MENU_UPDATE_FROM_INTERNET for a whole bookshelf

--- a/app/src/main/res/menu/bob.xml
+++ b/app/src/main/res/menu/bob.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -71,4 +71,18 @@
             app:showAsAction="never" />
 
     </group>
+
+    <!--
+    // ENHANCE: allow full bookshelf update, optionally using the EditBookOutput.BKEY_LAST_BOOK_ID_PROCESSED
+    // Disabled for now. It's a bit to easy for the user to select this from here,
+    // with potentially huge impact.
+    // This will use the currently displayed booklist (the book ID's)
+    // which could potentially be a very long list
+ -->
+    <item
+        android:id="@id/MENU_UPDATE_FROM_INTERNET"
+        android:icon="@drawable/ic_baseline_cloud_download_24"
+        android:orderInCategory="@integer/MENU_ORDER_UPDATE_FIELDS"
+        android:title="@string/menu_update_fields"
+        android:visible="false" />
 </menu>
