--- a/app/src/main/res/drawable/ic_baseline_select_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_select_24.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -19,17 +18,13 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@id/MENU_UPDATE_FROM_INTERNET_THIS_SHELF_ONLY"
-        android:icon="@drawable/ic_baseline_select_24"
-        android:orderInCategory="@integer/MENU_ORDER_EDIT"
-        android:title="@string/btn_just_this_shelf" />
-
-    <item
-        android:id="@id/MENU_UPDATE_FROM_INTERNET_ALL_SHELVES"
-        android:icon="@drawable/ic_baseline_select_all_24"
-        android:orderInCategory="@integer/MENU_ORDER_DELETE"
-        android:title="@string/lbl_all_bookshelves" />
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:autoMirrored="true"
+        android:tint="?attr/colorControlNormal"
+        android:viewportWidth="24"
+        android:viewportHeight="24">
+    <path android:fillColor="@android:color/white"
+          android:pathData="M7,17h10L17,7L7,7v10zM9,9h6v6L9,15L9,9z" />
+</vector>
