--- a/app/src/main/res/layout/popup_menu.xml
+++ b/app/src/main/res/layout/popup_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -25,6 +25,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:padding="@dimen/container_margin"
     tools:viewBindingIgnore="true"
     >
 
@@ -35,27 +36,26 @@
         android:ellipsize="end"
         android:gravity="center_vertical|start"
         android:maxLines="2"
-        android:padding="@dimen/popup_menu_title_padding"
         android:shadowRadius="0"
         android:textAppearance="?attr/textAppearanceTitleLarge"
         android:textIsSelectable="true"
         android:visibility="gone"
+        tools:ignore="TouchTargetSizeCheck"
         tools:text="Optional title"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/field_margin_start"
         android:textAppearance="?attr/textAppearanceTitleMedium"
-        android:textStyle="italic"
-        android:padding="@dimen/popup_menu_title_padding"
         android:textIsSelectable="true"
+        android:textStyle="italic"
         android:visibility="gone"
+        tools:ignore="TouchTargetSizeCheck"
         tools:text="Optional message"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/item_list"
