--- a/app/src/main/res/menu/bookshelf.xml
+++ b/app/src/main/res/menu/bookshelf.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -32,4 +32,10 @@
         android:icon="@drawable/ic_baseline_delete_24"
         android:orderInCategory="@integer/MENU_ORDER_DELETE"
         android:title="@string/action_delete" />
+
+    <item
+        android:id="@id/MENU_UPDATE_FROM_INTERNET"
+        android:icon="@drawable/ic_baseline_cloud_download_24"
+        android:orderInCategory="@integer/MENU_ORDER_UPDATE_FIELDS"
+        android:title="@string/menu_update_books" />
 </menu>
