--- a/app/src/main/res/menu/update_books.xml
+++ b/app/src/main/res/menu/update_books.xml
@@ -22,11 +22,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@id/MENU_UPDATE_FROM_INTERNET_THIS_SHELF_ONLY"
+        android:id="@id/MENU_UPDATE_FROM_INTERNET_THIS_NODE_ONLY"
         android:icon="@drawable/ic_baseline_select_24"
         android:orderInCategory="@integer/MENU_ORDER_EDIT"
-        android:title="@string/btn_just_this_shelf" />
+        android:title="@string/btn_this_node_only" />
 
+    <!-- FIXME: update the string... "books MATCHING this node, everywhere" -->
     <item
         android:id="@id/MENU_UPDATE_FROM_INTERNET_ALL_SHELVES"
         android:icon="@drawable/ic_baseline_select_all_24"
