--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -26,6 +26,7 @@
     <locale android:name="de" />
     <locale android:name="fr" />
     <locale android:name="nl" />
+    <locale android:name="pt" />
     <locale android:name="es" />
     <locale android:name="it" />
     <locale android:name="el" />
