--- a/app/src/main/res/xml/preferences_field_visibility.xml
+++ b/app/src/main/res/xml/preferences_field_visibility.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -37,7 +37,14 @@
         android:summary="@string/ps_manage_fields"
         android:title="@string/pt_field_visibility">
 
-        <!-- Authors are always visible, but the user can hide the type. -->
+        <!-- Authors are always visible, but the user can hide the type/pseudonym. -->
+        <!--        <SwitchPreference-->
+        <!--            android:defaultValue="true"-->
+        <!--            android:key="fields.visibility.real_author"-->
+        <!--            android:summaryOff="@string/no"-->
+        <!--            android:summaryOn="@string/yes"-->
+        <!--            android:title="@string/lbl_author_pseudonym" />-->
+
         <SwitchPreference
             android:defaultValue="true"
             android:key="fields.visibility.author_type"
