combining tabs now relies on a simple bool resource for sw800 screens

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -214,4 +214,7 @@
 
     <integer name="span_count_edit_bookshelves">1</integer>
     <integer name="span_count_update_from_internet">1</integer>
+
+    <!-- See the tab adapter used in EditBookFragment -->
+    <bool name="combine_book_edit_tabs">false</bool>
 </resources>
