--- a/app/src/main/res/values-sw800dp/dimens.xml
+++ b/app/src/main/res/values-sw800dp/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -38,4 +38,5 @@
           type="dimen">0.85
     </item>
 
+    <bool name="combine_book_edit_tabs">true</bool>
 </resources>
